[package]
name = "pkauth"
version = "0.1.0"
authors = ["James Parker <jp@pkauth.com>"]

[dependencies]
base64="*"
boolinator="*"
ring="*"
ripemd160="*"
rust-base58="*"
serde="*"
# serde_derive="*"
serde_json="*"
untrusted="^0.6.0"
crypto-abstract={path="../rs-crypto-abstract"}

# [[bin]]
# name = "gen"
# path = "src/bin.rs"
