[package]
name = "pkauth"
version = "0.1.0"
authors = ["James Parker <jp@pkauth.com>"]

[dependencies]
base64="*"
boolinator="*"
# ring="*"
ring = "0.13.0-alpha" # {git = "https://github.com/briansmith/ring.git", ref = "8411c0098ac1f8b4b96d0766a5057aae5e78c42a"}
ripemd160="*"
rust-base58="*"
serde="*"
# serde_derive="*"
serde_json="*"
# untrusted="^0.6.0"
crypto-abstract={path="../rs-crypto-abstract"}

# [[bin]]
# name = "gen"
# path = "src/bin.rs"
